fix build a new course screen layout issues on mobile devices

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -478,7 +478,11 @@ body.main .logo a img, .footer-logo a img {width: 55px;}
 .table {width: 100%;max-width: inherit;}
 .pop-up-area button#popup-close {right: 20px;width: 20px;}
 .popup-body {width: 250px;margin-left: -125px;}
+.course-build .popup-body {width: 250px;margin-left: -125px;margin-top:-333px}
 .pop-up-area {min-height: 365px;margin-left: 7px;}
+.course-build .pop-up-area {min-height: 100vh;margin: 0px;position: fixed;top: 0;bottom: 0;left: 0;right: 0;}
+.course-build-popup h2 { margin: 60px 0 20px;}
+.popup-body input[type="submit"] { margin-top: 10px;}
 .modal-dialog {width: auto;}
 .search-box button#close-search {height: 24px;width: 24px;font-size: 10px;}
 .search-list table,.search-list thead,.search-list tbody,.search-list th,.search-list td,.search-list tr {display: block;}
